<resources>
    <string name="app_name">woke</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Alarms</string>
    <string name="title_notifications">My Devices</string>
    <string name="title_activity_spash">SplashActivity</string>
    <string name="woke">W O K E</string>
    <string name="setupText"> Current Setup </string>
    <string name="myAlarmsText"> My Alarms </string>
    <string name="title_activity_current">CurrentActivity</string>
    <string name="setupID">Current Setup</string>
    <string name="alarmsString">My Alarms</string>
    <string name="devicesString">My Devices</string>
    <string name="title_activity_login">Sign in</string>
    <string name="brandString">Zapp Up</string>
    <string name="loginButtonString">Log in</string>
    <string name="getStartedString">Get Started</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
